--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quicktype",
+  "name": "crypttype",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.1",
     "typescript": "~3.8.2"
   },
   "scripts": {
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.7"
   }
 }
