--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "CryptType",
+  "name": "Type your text, while the screen shows junk jext.",
   "icons": [
     {
       "src": "favicon.ico",
